* re-tested on tablet ** annoying when peer has bad connection... should show pending connection state instead of jumping to menu ** also annoying to have to copy paste id of peer using another tools such as irc or gmail... should have server automatically give all peer ids * added published material on google play (screenshots)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,11 +2,19 @@ I'm tring to follow Semantic Versioning 2.0.0
 http://semver.org/
 
 =V0.0.0=
+2015-02-24
+* re-tested on tablet
+** annoying when peer has bad connection... should show pending connection state instead of jumping to menu
+** also annoying to have to copy paste id of peer using another tools such as irc or gmail... should have server automatically give all peer ids
+* added published material on google play (screenshots)
+
 2015-02-23
 * added some more bootstrap classes to the admin controls
 * can now reconnect to signaling server
 * can now connect/disconnect/delete peers
 * ready to release
+* connect tab disabled/enabled buttons to have different colors
+* connect tab: disable connect button if supplied id is empty
 
 2015-02-21
 * building app with crosswalk https://crosswalk-project.org
