--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 * got to make my own heartbeat from admin2 to admin1
 ** because when admin1 disconnected from wifi on tablet, no disconnect event was fired for admin2 in browser
 * disconnect button causes root scope in progress error in angular
+* save tournament to server
+* linking to tournament published results
