added link to static www for sharing

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,9 @@ I'm tring to follow Semantic Versioning 2.0.0
 http://semver.org/
 
 =V0.0.2=
+2015-04-05
+* added link to static www for sharing
+
 2015-04-04
 * added (un)favoriting connections of registered users
 * sorting peers by favorited, email, nickname, peer ID
